-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 11, 12, 13
-
Component/s: hotspot
-
b14
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8222601 | 12u-cpu | Aleksey Shipilev | P3 | Resolved | Fixed | master |
| JDK-8222054 | 12.0.2 | Aleksey Shipilev | P3 | Resolved | Fixed | b03 |
| JDK-8226500 | 11.0.5-oracle | Aleksey Shipilev | P3 | Resolved | Fixed | b02 |
| JDK-8221830 | 11.0.4 | Aleksey Shipilev | P3 | Resolved | Fixed | b01 |
$ CONF=linux-x86-server-fastdebug make run-test TEST=com/sun/crypto/provider/Cipher/ TEST_VM_OPTS="-XX:+UseParallelGC -XX:-TieredCompilation"
...
Test results: passed: 78; error: 11
This passes:
$ CONF=linux-x86-server-fastdebug make run-test TEST=com/sun/crypto/provider/Cipher/ TEST_VM_OPTS="-XX:+UseParallelGC -XX:-TieredCompilation -XX:-UseSHA512Intrinsics"
...
Test results: passed: 89
hs_err is foobared as well, with no stack trace information:
#
# A fatal error has been detected by the Java Runtime Environment:
#
# SIGSEGV (0xb) at pc=0x00000000, pid=108017, tid=108339
#
# JRE version: OpenJDK Runtime Environment (13.0) (fastdebug build 13-internal+0-adhoc.shade.jdk-jdk)
# Java VM: OpenJDK Server VM (fastdebug 13-internal+0-adhoc.shade.jdk-jdk, mixed mode, parallel gc, linux-x86)
# Problematic frame:
#
[error occurred during error reporting (printing problematic frame), id 0xe0000000, Internal Error (/home/shade/jdk-jdk/src/hotspot/cpu/x86/frame_x86.inline.hpp:49)]
# No core dump will be written. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
#
# If you would like to submit a bug report, please visit:
# http://bugreport.java.com/bugreport/crash.jsp
#
It does not happen in 8u. It does happen in 11u. I heavily suspect
- backported by
-
JDK-8221830 Lots of com/sun/crypto/provider/Cipher tests fail on x86_32 due to missing SHA512 stubs
-
- Resolved
-
-
JDK-8222054 Lots of com/sun/crypto/provider/Cipher tests fail on x86_32 due to missing SHA512 stubs
-
- Resolved
-
-
JDK-8222601 Lots of com/sun/crypto/provider/Cipher tests fail on x86_32 due to missing SHA512 stubs
-
- Resolved
-
-
JDK-8226500 Lots of com/sun/crypto/provider/Cipher tests fail on x86_32 due to missing SHA512 stubs
-
- Resolved
-
- relates to
-
JDK-8221495 Verify all intrinsics check for generated stub existence before calling into runtime
-
- Open
-
-
JDK-8165381 Update for x86 SHA512 using AVX2
-
- Resolved
-